--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "latest",
+    "@material-ui/lab": "latest",
     "react": "^16.8.6",
+    "react-compound-slider": "^0.16.3",
     "react-dom": "^16.8.6",
+    "react-rangeslider": "^2.2.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
