--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.3.1",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "latest",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
