Bug fix, graphics, etc

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kazoo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://zwasser2.github.io/KazooBand",
+  "homepage": "https://hirethebest.dev/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
@@ -21,11 +21,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
