Still trying to get it to work, worked on the github page but not customurl. Also deleted unused package

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kazoo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://zwasser2.github.io/KazooBand",
+  "homepage": "https://hirethebest.dev/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
