--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://hirethebest.dev/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.3.1",
