Added localstorage support

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-compound-slider": "^0.16.3",
     "react-dom": "^16.8.6",
     "react-rangeslider": "^2.2.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
