--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kazoo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hirethebest.dev/",
+  "homepage": "https://kazoobandcamp.com/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
